--- a/index.css
+++ b/index.css
@@ -14,6 +14,8 @@ body {
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    z-index: 999; /* Add this */
+
 }
 
 /* Navigation Links */
@@ -21,10 +23,11 @@ body {
     list-style: none;
     top: 20px;
     display: flex;
-    gap: 20px;
+    gap: 30px;
 }
 
 .navbar li a {
+    position: relative;
     text-decoration: none;
     color: black;
     font-weight: bold;
@@ -32,9 +35,24 @@ body {
     transition: color 0.3s ease;
 }
 
-.navbar li a:hover {
-    color: #8c96f5;
+.navbar li a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 100%;
+    height: 2px;
+    background-color: #8c96f5;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s ease;
 }
+
+.navbar li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
 
 /* Fixed Logo in Top Left */
 .logo-fixed {
@@ -42,6 +60,8 @@ body {
     top: 20px;
     left: 20px;
     z-index: 1000;
+    pointer-events: none;
+
 }
 
 .logo-fixed video {
@@ -50,12 +70,12 @@ body {
     display: block;
 }
 
-
 /* Hero Section */
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh;
+    margin-top: 130px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,30 +101,39 @@ p {
     color: #555;
 }
 
-/* Pastel Blue Rectangle */
-.rectangle {
-    position: absolute;
-    top: 20%;
-    left: 0;
-    width: 45%;
-    height: 280px;
-    background-color: #B8D8E6;
-    z-index: 1;
+html {
+    scroll-behavior: smooth;
 }
+
+.arrow-img {
+    width: 100px;
+    height: auto;
+    display: block;
+    margin: 0px auto;
+    transition: transform 0.3s ease;
+    margin-bottom: 250px;
+
+}
+
+.arrow-img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
 
 /* Portfolio Section */
 .portfolio {
     display: flex;
     justify-content: center;
-    gap: 40px; /* spacing between items */
-    padding: 60px 20px;
+    gap: 100px; /* spacing between items */
+    padding: 40px 20px;
     background-color: #f8f8f8;
     flex-wrap: wrap;
 }
 
 .portfolio-item {
-    flex: 1 1 300px;
-    max-width: 500px;
+    flex: 1 1 400px;
+    max-width: 600px;
     transition: transform 0.3s ease;
 }
 
@@ -123,8 +152,8 @@ p {
 
 /* Hover effect */
 .portfolio-item img:hover {
-    filter: grayscale(30%) brightness(90%);
-    transform: scale(1.02);
+    filter: grayscale(20%) brightness(100%);
+    transform: scale(1.05);
     cursor: pointer;
 }
 
