--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ body {
 .hero {
     position: relative;
     width: 100%;
-    margin-top: 130px;
+    margin-top: 110px;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
@@ -120,25 +120,37 @@ html {
     cursor: pointer;
 }
 
+@media (max-width: 768px) {
+    .portfolio {
+        grid-template-columns: 1fr; /* switch to 1 column on small screens */
+    }
+}
 
 /* Portfolio Section */
+.portfolio-wrapper {
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
 .portfolio {
-    display: flex;
-    justify-content: center;
-    gap: 100px; /* spacing between items */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    gap: 50px; /* spacing between items */
     padding: 40px 20px;
-    background-color: #f8f8f8;
+    width: 100%;
     flex-wrap: wrap;
 }
 
 .portfolio-item {
-    flex: 1 1 400px;
     max-width: 600px;
     transition: transform 0.3s ease;
+    padding-bottom: 50px;
 }
 
 .portfolio-item a {
-    display: block;
+    display: grid;
     overflow: hidden;
     border-radius: 10px;
 }
@@ -146,7 +158,8 @@ html {
 .portfolio-item img {
     width: 100%;
     height: auto;
-    display: block;
+    display: grid;
+    margin: 0 auto;  
     transition: filter 0.3s ease, transform 0.3s ease;
 }
 
