--- a/ticprocess.css
+++ b/ticprocess.css
@@ -2,8 +2,6 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
     background-color: white;
-    margin: 0;
-    padding: 0;
 }
 
 /* Navbar Container */
@@ -53,8 +51,6 @@ body {
     transform-origin: left;
 }
 
-
-/* Fixed Logo in Top Left */
 .logo-fixed {
     position: relative;
     top: 20px;
@@ -69,3 +65,40 @@ body {
     width: auto;
     display: block;
 }
+
+/* Project Background Styles */
+.project-process {
+    background-color: #fff;
+    padding: 50px 50px; /* top and bottom padding only */
+    font-family: 'Josefin Sans', sans-serif;
+  }
+  
+  .background-content {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 0px; /* THIS controls left/right spacing */
+    line-height: 1.7;
+    color: #333;
+  }
+  
+.project-process h2 {
+font-size: 2.2rem;
+font-weight: 600;
+margin-bottom: 25px;
+}
+
+.project-process h3 {
+font-size: 1.5rem;
+margin-top: 50px;
+margin-bottom: 20px;
+font-weight: 300;
+color: #444;
+}
+
+.project-process p {
+font-size: 1.15rem;
+margin-bottom: 22px;
+color: #444;
+text-align: justify;
+}
+
