--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
     top: 20px;
     display: flex;
     gap: 30px;
+    z-index: 1002; /* higher than logo's 1000 */
 }
 
 .navbar li a {
@@ -59,7 +60,7 @@ body {
     position: relative;
     top: 20px;
     left: 20px;
-    z-index: 1000;
+    z-index: 999;
     pointer-events: none;
 
 }
