--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    z-index: 999; /* Add this */
+    z-index: 999; 
 
 }
 
@@ -24,7 +24,7 @@ body {
     top: 20px;
     display: flex;
     gap: 30px;
-    z-index: 1002; /* higher than logo's 1000 */
+    z-index: 1002; 
 }
 
 .navbar li a {
@@ -60,7 +60,6 @@ body {
     position: relative;
     top: 20px;
     left: 20px;
-    z-index: 999;
     pointer-events: none;
 
 }
@@ -90,7 +89,7 @@ display: none;
     position: fixed;
     top: 20px;
     right: 30px;
-    z-index: 999;
+    z-index: 1000;
     cursor: pointer;
 }
 
@@ -117,6 +116,14 @@ display: none;
 #menu-toggle:checked + .hamburger + .navbar ul {
     display: flex;
 }
+
+.logo-fixed video {
+    height: 100px; 
+    width: auto;
+    display: block;
+    z-index: 999;
+}
+
 }
 
 /* Hero Section */
@@ -169,11 +176,17 @@ html {
     cursor: pointer;
 }
 
+
 @media (max-width: 768px) {
     .portfolio {
-        grid-template-columns: 1fr; /* switch to 1 column on small screens */
+      grid-template-columns: 1fr; /* stack items on top of each other */
+      padding: 25px 15px;
+      gap: 20px;
     }
-}
+  /*   .portfolio-item {
+        max-width: 400px;
+    } */
+  }
 
 /* Portfolio Section */
 .portfolio-wrapper {
@@ -219,11 +232,4 @@ html {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .portfolio {
-      grid-template-columns: 1fr; /* stack items on top of each other */
-      padding: 25px 15px;
-      gap: 20px;
-    }
-  }
   
