--- a/contact.css
+++ b/contact.css
@@ -60,6 +60,8 @@ body {
     top: 20px;
     left: 20px;
     pointer-events: none;
+    outline: 4px solid white;
+    outline-offset: -4px;
 
 }
 
