--- a/index.css
+++ b/index.css
@@ -127,6 +127,7 @@ display: none;
 }
 
 .portfolio {
+    display: grid;
     grid-template-columns: 1fr; /* stack items on top of each other */
     padding: 25px 15px;
     gap: 20px;
